# gotham-app

./: README.md  gotham_crime_data.db  pyproject.toml  requirements.txt
gotham_app/: __main__.py  crud.py  exceptions.py  frontend_router.py  models.py
gotham_app/templates/: index.html
